--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@vitejs/plugin-react": "^4.3.1",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.43.12",
